# quick-data-generate-cli

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config
.github/workflows/: github-actions-demo.yml
ckd-cli/: Cargo.toml
ckd-cli/src/: check.rs  cli.rs  main.rs
ckd-core/: Cargo.toml
ckd-core/src/: lib.rs
ckd-core/src/core/: cons.rs  error.rs  fake.rs  mod.rs  parse.rs  traits.rs  watch.rs
ckd-core/src/core/limit/: leaky.rs  mod.rs  slide.rs
ckd-core/src/datasource/: clickhouse.rs  csv.rs  fake.rs  kafka.rs  mod.rs  mysql.rs
ckd-core/src/db/: delete.rs  insert.rs  mod.rs  query.rs  update.rs
ckd-core/src/exec/: csv.rs  fake.rs  kafka.rs  mod.rs  mysql.rs
ckd-core/src/model/: column.rs  schema.rs
ckd-core/src/task/: clickhouse.rs  csv.rs  fake.rs  kafka.rs  mod.rs  mysql.rs
ckd-ui/: Cargo.toml  components.d.ts  package.json  pnpm-lock.yaml  splashscreen.html  tsconfig.json  vite.config.ts
ckd-ui/src/: App.vue  main.ts
ckd-ui/src-tauri/: Cargo.toml  tauri.conf.json
ckd-ui/src-tauri/src/: main.rs
ckd-ui/src/components/: MenuList.vue  StaticsLog.vue  dashboard.vue  datasource.vue  notFound.vue  settings.vue
ckd-ui/src/route/: index.ts  menu.ts
ckd-ui/src/store/: counter.ts  datasource.ts  setting.ts
ckd-web/: Cargo.toml
examples/: mysql.json  other.json  schema.json  schema2.json  schema3.json
src/: check.rs  cli.rs  column.rs  error.rs  fake.rs  log.rs  macros.rs  main.rs  model.rs  output.rs  parse.rs  schema.rs  task.rs  util.rs
src/core/: check.rs  cli.rs  error.rs  fake.rs  log.rs  mod.rs  parse.rs  shutdown.rs  traits.rs
src/core/limit/: count.rs  leaky.rs  mod.rs  slide.rs  token.rs
src/datasource/: clickhouse.rs  csv.rs  fake.rs  kafka.rs  mod.rs  mysql.rs
src/db/: delete.rs  insert.rs  mod.rs  query.rs  update.rs
src/exec/: csv.rs  fake.rs  kafka.rs  mod.rs  mysql.rs
src/filter/: mod.rs
src/model/: column.rs  schema.rs
src/output/: clickhouse.rs  csv.rs  kafka.rs  mod.rs  mysql.rs
src/task/: clickhouse.rs  csv.rs  fake.rs  kafka.rs  mod.rs  mysql.rs
submodule/mysql_async/: Cargo.toml
submodule/mysql_async/src/conn/routines/: exec.rs
submodule/mysql_async/test/: client.p12
submodule/rust_mysql_common/src/: named_params.rs
submodule/rust_mysql_common/src/misc/raw/: flags.rs
