[package]
name = "ckd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse = "0.11.4"
tokio = {version = "1.28.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.26"
num_cpus = "1.15.0"
lazy_static = "1.4.0"
# tracing = "0.1"
# tracing-subscriber = "0.3.0"
time = "0.3.21"
effective-limits = "0.5.5"
structopt = "0.3"
# openssl = { version = "0.10", features = ["vendored"] }
[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
[source.crates-io]
registry = "https://github.com/rust-lang/crates.io-index"
replace-with = 'ustc'
[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"