[package]
name = "ckd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse = "0.11.4"
tokio = {version = "1.28.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.26"
num_cpus = "1.15.0"
lazy_static = "1.4.0"
# tracing = "0.1"
# tracing-subscriber = "0.3.0"
time = { version = "0.3.21", features = ["serde", "macros", "rand", "std"] }
fake = { version = "2.6", features=['derive', 'time', 'uuid']}
effective-limits = "0.5.5"
structopt = "0.3"
async-trait = "0.1.68"
serde_json = "1.0.96"
mysql_async = { path="./submodule/mysql_async" }
mysql_common = { path="./submodule/rust_mysql_common" }
futures = "0.3.28"
regex = "1.8.4"
thiserror = "1.0.40"
kafka = "0.9.0"
winapi = {version = "0.3.9", features=["winuser","minwindef"]}
[dev-dependencies]
tokio-test = "*"
openssl = "0.10.54"
pretty_assertions = "1"
# openssl = { version = "0.10", features = ["vendored"] }
[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
