[package]
name = "ckd-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckd-core = { version= "0.1.0", path = "../ckd-core"}
tokio = {version = "1.28.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
structopt = "0.3"
async-trait = "0.1.68"
serde_json = "1.0.96"
regex = "1.8.4"
home = "0.5.5"
mysql_common = { path="../submodule/rust_mysql_common" }

time = { version = "0.3.21", features = ["serde", "macros", "rand", "std"] }
